# faast_assignments

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: lint_test.yml
life_expectancy/: cleaning.py  data_cleaning.py  file_handler.py  main.py  region.py  test_region.py
life_expectancy/data/: pt_life_expectancy.csv
life_expectancy/tests/: conftest.py  test_cleaning.py  test_file_handler.py  test_main.py
