[tool.poetry]
name = "assignments"
version = "0.0.1"
description = "First assignment of the FAAST Advance Foundations"
authors = ["Fernando Cordeiro<fernando@daredata.engineering>"]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
pytest-cov = "*"

[tool.poetry.scripts]
# Add your script(s) here

[tool.poetry.scripts]
life_expectancy = "*"

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80
