[project]
name = "assignments"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the FAAST Advance Foundations"
authors = [
    {name = "Nuno Paiva<nuno.paiva@nos.pt>"}
]
dependencies = ["pandas"]

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "mypy", "isort", "pandas-stubs", "pre-commit"]

[tool.setuptools]
packages = ["life_expectancy"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80
